tests/baselines/reference/parserConstructorDeclaration4.errors.txt
==== tests/cases/compiler/parserConstructorDeclaration4.ts (1 errors) ====
    class C {
      declare constructor() { }
      ~~~~~~~
!!! parserConstructorDeclaration4.ts(2,3): error TS1031: 'declare' modifier cannot appear on a class element.
    }